gphoto2 2.3.0.2.trunk

  * Added --hook-script option, including man page update and test-hook.sh.
  * Fix: --get-all-metadata takes no argument.

gphoto2 2.3.0

  * Require popt library to parse command line options.
  * Partitioned command line options into groups of related options.
  * Added --debug-logfile=FILENAME option.
  * Only load all camlibs if necessary.
  * (Half-)Fix to make --with-libgphoto2=PREFIX configure parameter work.
  * Preliminary support for lower-case filenames in --filename pattern: %:
  * Added "rmdir" command to gphoto2 --shell.

gphoto2 2.2

  * Some speed-ups by avoiding to load
    list of ports / cameras multiple times.

  * More --shell commands added (put, rmdir, mkdir, configuration,
    capture).

  * Metadata down and upload added.

  * Waiting for events added.

gphoto2 2.2.0.trunk

  * Option --debug-logfile=FILENAME added.
  * Options grouped for a little structure in --help output.

gphoto2 2.1.99

  * Requires libgphoto2 2.1.99 to build
  * Various new translations

gphoto2 2.1.6